Fixed alignment for custom inputs

--- a/_forms.css.scss
+++ b/_forms.css.scss
@@ -131,6 +131,7 @@ select {
     cursor: pointer;
     position: relative;
     padding-left: 25px;
+    padding-right: 15px;
     margin-right: 15px;
 
     &:before {
@@ -141,6 +142,7 @@ select {
       margin-right: 10px;
       position: absolute;
       left: 0;
+      bottom: 2px;
       background: $colorCorpHighlightLighter;
     }
   }
@@ -159,7 +161,7 @@ select {
     height: 8px;
     position: absolute;
     left: 5px;
-    bottom: 9px;
+    bottom: 7px;
     background: white;
   }
 
